syntax = "proto3";

package welcome;
option go_package="welcomepb";

message Person {
    string first_name = 1;
    string last_name = 2;
}

message WelcomeRequest {
    Person person = 1;
}

message WelcomeResponse {
    string result = 1;
}

service WelcomeService {
    rpc Welcome(WelcomeRequest) returns (WelcomeResponse) {};
}
